--- a/Level6/Lesson10/pom.xml
+++ b/Level6/Lesson10/pom.xml
@@ -11,11 +11,7 @@
     <groupId>ru.moore</groupId>
     <artifactId>lesson9</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-<<<<<<< HEAD
-    <name>lesson9</name>
-=======
     <name>lesson10</name>
->>>>>>> Level6Lesson10
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
@@ -29,13 +25,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-<<<<<<< HEAD
-<!--        <dependency>-->
-<!--            <groupId>org.flywaydb</groupId>-->
-<!--            <artifactId>flyway-core</artifactId>-->
-<!--        </dependency>-->
-=======
->>>>>>> Level6Lesson10
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
@@ -52,14 +41,6 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-<<<<<<< HEAD
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-=======
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
@@ -67,7 +48,16 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
->>>>>>> Level6Lesson10
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.4.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.4.5</version>
         </dependency>
     </dependencies>
 
